--- a/movie-booking-prod.properties
+++ b/movie-booking-prod.properties
@@ -1,24 +1,17 @@
-#enable actuator
+#actuator
 management.endpoints.web.exposure.include=*
 
-#DataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/admin?createDatabaseIfNotExist=true
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#datasource
+spring.jpa.hibernate.ddl-auto=create 
+spring.datasource.url=jdbc:mysql://localhost:3306/movieticket?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Neelima@1201
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.datasource-platform=org.hibernate.dialect.MYSQL8Dialect
+spring.jpa.show-sql: true
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-
-spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-spring.datasource.hikari.maximum-pool-size=78
-spring.datasource.hikari.connection-timeout=6000
-
+server.port=8088
+spring.datasource.hikari.maximum-pool-size=30
+spring.datasource.hikari.connection-timeout=60000
 application.theme.color=black
-
-
-
 
