--- a/application.properties
+++ b/application.properties
@@ -5,7 +5,7 @@ management.endpoints.web.exposure.include=*
 spring.jpa.hibernate.ddl-auto=create 
 spring.datasource.url=jdbc:mysql://localhost:3306/movieticket?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Neelima@!201
+spring.datasource.password=Neelima@1201
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.jpa.datasource-platform=org.hibernate.dialect.MYSQL8Dialect
 spring.jpa.show-sql: true
